//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table AuditLog {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  context AuditLogContextEnum [not null]
  method AuditLogRequestMethodEnum
  event String [not null]
  data Json
}

Table Therapy {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  description String
  duration Int
  status CurrentStatus [not null]
  diagnosis Diagnosis
  diagnosisId Int
  condition Condition
  conditionId Int
  patient Patient [not null]
  patientTherapies PatientTherapies [not null]
  doctorTherapies DoctorTherapies [not null]
  taskTherapy TaskTherapy [not null]
}

Table Diagnosis {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  description String
  status CurrentStatus [not null]
  therapies Therapy [not null]
}

Table Condition {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  description String
  severity String
  status CurrentStatus [not null]
  therapies Therapy [not null]
  conditionSymptom ConditionSymptom [not null]
  taskCondition TaskCondition [not null]
}

Table Symptom {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  description String
  conditionSymptom ConditionSymptom [not null]
}

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role RoleType [not null, default: 'USER']
  patients Patient [not null]
  doctors Doctor [not null]
  consumers Consumer [not null]
  userResource UserResource [not null]
}

Table Patient {
  id Int [pk, increment]
  lastTherapy Therapy
  lastTherapyId Int
  user User
  userId Int
  patientTherapies PatientTherapies [not null]
}

Table Doctor {
  id Int [pk, increment]
  specialty String
  user User
  userId Int
  doctorTherapies DoctorTherapies [not null]
}

Table Consumer {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  preferences String
  user User
  userId Int
}

Table Resource {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  metadata Json
  type ResourceType [not null]
  taskResource TaskResource [not null]
  userResource UserResource [not null]
}

Table Task {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  description String [not null]
  output String [not null]
  status CurrentStatus [not null]
  taskResource TaskResource [not null]
  taskTherapy TaskTherapy [not null]
  taskCondition TaskCondition [not null]
}

Table PatientTherapies {
  patient Patient [not null]
  patientId Int [not null]
  therapy Therapy [not null]
  therapyId Int [not null]

  indexes {
    (patientId, therapyId) [pk]
  }
}

Table DoctorTherapies {
  doctor Doctor [not null]
  doctorId Int [not null]
  therapy Therapy [not null]
  therapyId Int [not null]

  indexes {
    (doctorId, therapyId) [pk]
  }
}

Table TaskResource {
  task Task [not null]
  taskId Int [not null]
  resource Resource [not null]
  resourceId Int [not null]

  indexes {
    (taskId, resourceId) [pk]
  }
}

Table UserResource {
  user User [not null]
  userId Int [not null]
  resource Resource [not null]
  resourceId Int [not null]

  indexes {
    (userId, resourceId) [pk]
  }
}

Table TaskTherapy {
  task Task [not null]
  taskId Int [not null]
  therapy Therapy [not null]
  therapyId Int [not null]

  indexes {
    (taskId, therapyId) [pk]
  }
}

Table TaskCondition {
  task Task [not null]
  taskId Int [not null]
  condition Condition [not null]
  conditionId Int [not null]

  indexes {
    (taskId, conditionId) [pk]
  }
}

Table ConditionSymptom {
  comdition Condition [not null]
  conditionId Int [not null]
  symptom Symptom [not null]
  symptomId Int [not null]

  indexes {
    (conditionId, symptomId) [pk]
  }
}

Enum RoleType {
  USER
  ADMIN
}

Enum AuditLogContextEnum {
  http
  ws
  rpc
}

Enum AuditLogRequestMethodEnum {
  get
  post
  put
  patch
  delete
}

Enum CurrentStatus {
  Requested
  ToDo
  InProgress
  OnHold
  Completed
  Cancelled
  Failed
}

Enum ResourceType {
  TextType
  UserMetricType
  UserNoteType
  UserTaskAnswerType
  TaskOutputType
  IntegrationType
  VideoType
  AudioType
  ImageType
}

Ref: Therapy.diagnosisId > Diagnosis.id

Ref: Therapy.conditionId > Condition.id

Ref: Patient.lastTherapyId > Therapy.id

Ref: Patient.userId > User.id

Ref: Doctor.userId > User.id

Ref: Consumer.userId > User.id

Ref: PatientTherapies.patientId > Patient.id

Ref: PatientTherapies.therapyId > Therapy.id

Ref: DoctorTherapies.doctorId > Doctor.id

Ref: DoctorTherapies.therapyId > Therapy.id

Ref: TaskResource.taskId > Task.id

Ref: TaskResource.resourceId > Resource.id

Ref: UserResource.userId > User.id

Ref: UserResource.resourceId > Resource.id

Ref: TaskTherapy.taskId > Task.id

Ref: TaskTherapy.therapyId > Therapy.id

Ref: TaskCondition.taskId > Task.id

Ref: TaskCondition.conditionId > Condition.id

Ref: ConditionSymptom.conditionId > Condition.id

Ref: ConditionSymptom.symptomId > Symptom.id